--- a/app/src/main/res/layout-land/fragment_movie_detail.xml
+++ b/app/src/main/res/layout-land/fragment_movie_detail.xml
@@ -6,54 +6,105 @@
             xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:padding="@dimen/activity_horizontal_margin"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/movie_poster_image_view"
-            android:layout_marginRight="10dp"
-            android:layout_width="@dimen/poster_width"
-            android:layout_height="@dimen/poster_height"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/movie_poster_image_view"
+                android:layout_marginRight="@dimen/ten_dp"
+                android:layout_width="@dimen/poster_width"
+                android:layout_height="@dimen/poster_height"/>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/movie_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="Movie Title"
+                    style="@style/MovieTitle"/>
+
+                <TextView
+                    android:id="@+id/movie_year"
+                    android:textColor="@android:color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="2015"/>
+
+                <TextView
+                    android:textStyle="bold"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/movie_rating"
+                    android:textColor="@color/colorAccent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="8/10"/>
+
+                <CheckBox
+                    android:id="@+id/movie_favorite_button"
+                    android:layout_marginTop="20dp"
+                    android:button="@drawable/favorite_button_selector"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+                <TextView
+                    android:layout_marginTop="20dp"
+                    android:textColor="@android:color/black"
+                    android:id="@+id/movie_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:text="Movie description"/>
+                <TextView
+                    android:id="@+id/show_reviews_text_view"
+                    android:textColor="@color/colorAccent"
+                    android:paddingBottom="@dimen/twenty_dp"
+                    android:text="@string/show_all_reviews_label"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+        </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/trailer_wrapper_view"
             android:orientation="vertical"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/movie_title"
+                style="@style/HeaderLabel"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:text="@string/trailer_label"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="Movie Title"
-                style="@style/MovieTitle"/>
+                android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/movie_year"
-                android:textColor="@android:color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="2015"/>
 
-            <TextView
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
-                android:id="@+id/movie_rating"
-                android:textColor="@color/colorAccent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="8/10"/>
-
-            <TextView
-                android:layout_marginTop="20dp"
-                android:textColor="@android:color/black"
-                android:id="@+id/movie_description"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/trailer_recycler_view"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:text="Movie description"/>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
+
+
+
 
     </LinearLayout>
 
