--- a/app/src/main/res/layout/fragment_movie_list_view_pager.xml
+++ b/app/src/main/res/layout/fragment_movie_list_view_pager.xml
@@ -14,6 +14,6 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/movie_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
