--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#f44336</color>
     <color name="colorPrimaryDark">#d32f2f</color>
+    <color name="colorSecondary">#E57373</color>
     <color name="colorAccent">#ff1744</color>
     <color name="offWhite">#f1f1f1</color>
     <color name="posterBackground">#FEFEFE</color>
