--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,13 @@
         <item name="android:layout_marginBottom">20dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>;
+
+    </style>
+
+    <style name="HeaderLabel">
+        <item name="android:color">@android:color/black</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_marginBottom">8dp</item>
     </style>
 
 </resources>
